# youtube

./: Dockerfile  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  main.rs  models.rs  routes.rs  search_video.rs  subscriptions.rs  videos.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AuthCallback.js  Test.css  Test.js  VideoGrid.css  VideoGrid.js
